--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=api
+spring.datasource.url=jdbc:mysql://localhost/com_med
+spring.datasource.username=admin
+spring.datasource.password=admin
