--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost/com_med
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
